[package]
name = "openapi-test-server"
version = "0.0.1"
edition = "2021"
description = "A web server for testing OpenAPI clients."
authors = ["Dylan Anthony <contact@dylananthony.com>"]
license = "Apache-2.0"

[dependencies]
axum = { version = "0.4.3", features = ["json", "multipart"] }
futures = "0.3.19"
serde = { version = "1.0.133", features = ["derive"] }
tokio = { version = "1.15.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.29"
tracing-subscriber = "0.3.5"

[features]
