[package]
name = "openapi-test-server"
version = "0.2.0"
edition = "2024"
description = "A web server for testing OpenAPI clients."
authors = ["Dylan Anthony <contact@dylananthony.com>"]
license = "Apache-2.0"

[dependencies]
actix-multipart = "0.7.2"
actix-web = "4.11.0"
serde = { version = "1.0.192", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[lints.rust]
unsafe_code = "forbid"
warnings = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }

# cargo-deny handles this
multiple_crate_versions = "allow"

# Don't panic!
panic = "deny"
exit = "deny"
unimplemented = "deny"
todo = "deny"
expect_used = "deny"
unwrap_used = "deny"
indexing_slicing = "deny"
missing_panics_doc = "forbid"

# Use `tracing`, not print
print_stdout = "deny"
print_stderr = "deny"
